# blue

./: .gitignore  README.md  build-termux.sh  build.py  build_zipapp.py  exiur.spec  exiur_cli.py  pyproject.toml
.github/workflows/: build.yml
exiur/: api.py  cli.py  config.py  menu.py  ui.py
